--- a/src/Presentation/wwwroot/css/site.css
+++ b/src/Presentation/wwwroot/css/site.css
@@ -16,3 +16,18 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+.image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    background-color: lightslategrey;
+}
+
+.thumbnail {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin: 10px;
+}
