--- a/src/Presentation/Pages/PatientList/Create.cshtml
+++ b/src/Presentation/Pages/PatientList/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Patient page";
 }
 
-<br />
+<br/>
 <h2 class="text-info">Add a new Patient</h2>
-<br />
+<br/>
 
 <div class="border rounded container col-6" style="padding:30px;">
     <form method="post" enctype="multipart/form-data">
@@ -15,7 +15,7 @@
                 <label class="font-weight-bold" asp-for="Patient.FirstName"></label>
             </div>
             <div class="col-10">
-                <input asp-for="Patient.FirstName" class="form-control" />
+                <input asp-for="Patient.FirstName" class="form-control"/>
                 <span class="text-danger" asp-validation-for="Patient.FirstName"></span>
             </div>
         </div>
@@ -24,7 +24,7 @@
                 <label class="font-weight-bold" asp-for="Patient.LastName"></label>
             </div>
             <div class="col-10">
-                <input asp-for="Patient.LastName" class="form-control" />
+                <input asp-for="Patient.LastName" class="form-control"/>
             </div>
         </div>
         <div class="form-group row">
@@ -32,17 +32,26 @@
                 <label class="font-weight-bold" asp-for="Patient.BirthDate"></label>
             </div>
             <div class="col-10">
-                <input asp-for="Patient.BirthDate" type="date" asp-format="{0:yyyy-MM-dd}" class="form-control" />
+                <input asp-for="Patient.BirthDate" type="date" asp-format="{0:yyyy-MM-dd}" class="form-control"/>
             </div>
         </div>
-        <hr />
-
-        <div class="form-group row">            
+        <div class="form-group row">
+            <div class="col-2">
+                <label class="font-weight-bold" asp-for="Patient.NextAppointment"></label>
+            </div>
             <div class="col-10">
-              <input type="file" name="files" id="files" capture="camera" accept="image/*" multiple>               
+                <input asp-for="Patient.NextAppointment" type="date" asp-format="{0:yyyy-MM-dd}" class="form-control"/>
             </div>
         </div>
-        <hr />
+
+        <hr/>
+
+        <div class="form-group row">
+            <div class="col-10">
+                <input type="file" name="files" id="files" capture="camera" accept="image/*" multiple>
+            </div>
+        </div>
+        <hr/>
 
         <div class="form-group row">
             <div class="col-6">
@@ -52,9 +61,6 @@
                 <a asp-page="Index" class="btn btn-secondary form-control"> Cancel</a>
             </div>
         </div>
-
-
-
 
 
     </form>
