Use PatientResponse as universal returned model

--- a/src/Presentation/Pages/PatientList/Detail.cshtml
+++ b/src/Presentation/Pages/PatientList/Detail.cshtml
@@ -8,11 +8,11 @@
 
 <div class="card">
     <div class="card-header">
-    @Model.PatientDetails.Patient.GetPatientFullName()
+    @Model.PatientDetails.GetPatientFullName()
     </div>
     <div class="card-body">
-    <h5 class="card-title"> @Model.PatientDetails.Patient.FirstName </h5>
-    <p class="card-text">@Model.PatientDetails.Patient.BirthDate.ToShortDateString()</p>    
+    <h5 class="card-title"> @Model.PatientDetails.FirstName </h5>
+    <p class="card-text">@Model.PatientDetails.Age</p>    
      <a asp-page="Index" class="btn btn-primary form-control text-white">List Patient</a>
     </div>
     </div>
@@ -20,7 +20,7 @@
 @{
     @if (@Model.base64Images.Count() == 0)
     {
-        <div>No documents attached to the @Model.PatientDetails.Patient.FirstName</div>
+        <div>No documents attached to the @Model.PatientDetails.FirstName</div>
     }   
    
         <div class="image-gallery">
