--- a/src/Presentation/Pages/PatientList/Index.cshtml
+++ b/src/Presentation/Pages/PatientList/Index.cshtml
@@ -18,7 +18,7 @@
 
 
 @{
-    if (Model.Patients.Count() > 0)
+    if (Model.Patientlist.Count() > 0)
     {
         <form method="post">
             <table id="test" class="table p-4 m-4">
@@ -26,19 +26,19 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">
-                        <label asp-for="Patients.FirstOrDefault().FirstName"></label>
+                        <label asp-for="Patientlist.FirstOrDefault().FirstName"></label>
                     </th>
                     <th scope="col">
-                        <label asp-for="Patients.FirstOrDefault().LastName"></label>
+                        <label asp-for="Patientlist.FirstOrDefault().LastName"></label>
                     </th>
                     <th scope="col">
-                        <label asp-for="Patients.FirstOrDefault().Age"></label>
+                        <label asp-for="Patientlist.FirstOrDefault().Age"></label>
                     </th>
                     <th scope="col">
-                        <label asp-for="Patients.FirstOrDefault().NextAppointment"></label>
+                        <label asp-for="Patientlist.FirstOrDefault().NextAppointment"></label>
                     </th>
                     <th scope="col">
-                        <label asp-for="Patients.FirstOrDefault().TotalDocuments"></label>
+                        <label asp-for="Patientlist.FirstOrDefault().TotalDocuments"></label>
                     </th>
                     <th></th>
                 </tr>
@@ -48,7 +48,7 @@
                 @{
                     int index = 1;
                 }
-                @foreach (var patient in Model.Patients)
+                @foreach (var patient in Model.Patientlist)
                 {
                     <tr>
                         <th scope="row">
