Change the tittle of the create page

--- a/src/Presentation/Pages/PatientList/Create.cshtml
+++ b/src/Presentation/Pages/PatientList/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Presentation.Pages.PatientList.CreateModel
 @{
-    ViewData["Title"] = "Patient page";
+    ViewData["Title"] = "Create Patient";
 }
 
 <br/>
