--- a/src/Presentation/Pages/PatientList/Detail.cshtml
+++ b/src/Presentation/Pages/PatientList/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Presentation.Pages.PatientList.DetailModel
+@model DetailModel
 @{
     ViewData["Title"] = "Patient Detail";
 }
@@ -9,23 +9,22 @@
     </div>
     <div class="card-body">
         <h5 class="card-title"> Patient Name: @Model.PatientResponse.FirstName </h5>
-        <p class="card-text">   Patient Age: @Model.PatientResponse.Age</p>
+        <p class="card-text"> Patient Age: @Model.PatientResponse.Age</p>
         <a asp-page="Index" class="btn btn-primary form-control text-white"> Back to List Patient</a>
     </div>
 </div>
 
 @{
-    @if (@Model.PatientDocsResponse != null)
+    @if (Model.PatientDocsResponse != null)
     {
-    
-    <div class="image-gallery">
-        @foreach (var image in Model.PatientDocsResponse)
-        {
-            <a href="@image.PatientDocumentbase64" target="_blank">
-                <img src="data:image/jpeg;base64,@image.PatientDocumentbase64" alt="Image" class="thumbnail" height="300" width="300">
-            </a>
-        }
-    </div>
+        <div class="image-gallery">
+            @foreach (var image in Model.PatientDocsResponse)
+            {
+                <a href="@image.PatientDocumentbase64" target="_blank">
+                    <img src="data:image/jpeg;base64,@image.PatientDocumentbase64" alt="Image" class="thumbnail" height="300" width="300">
+                </a>
+            }
+        </div>
     }
     else
     {
