Revert "Adding Delete functionality and code refactor"
This reverts commit 830ce78950ecda72e64876527c2dffa9d6b7666a.

--- a/src/Presentation/Pages/PatientList/Detail.cshtml
+++ b/src/Presentation/Pages/PatientList/Detail.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model DetailModel
-@{ ViewData["Title"] = "Patient Detail"; }
+@{
+    ViewData["Title"] = "Patient Detail";
+}
 <div class="card">
     <div class="card-header">
         @Model.PatientResponse.GetPatientFullName()
