--- a/src/Presentation/Pages/PatientList/Index.cshtml
+++ b/src/Presentation/Pages/PatientList/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model IndexModel
-@{ ViewData["Title"] = "Patients Index"; }
+@{
+    ViewData["Title"] = "Patients Index";
+}
 <br/>
 <div class="container row p-0 m-0">
     <div class="col-9">
