--- a/src/Presentation/Pages/Index.cshtml
+++ b/src/Presentation/Pages/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model IndexModel
-@{ ViewData["Title"] = "Home page";}
+@{
+    ViewData["Title"] = "Home page";
+}
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
