--- a/src/WebSite/ClnqWebSite/src/app/app.component.scss
+++ b/src/WebSite/ClnqWebSite/src/app/app.component.scss
@@ -116,14 +116,15 @@ div{
 .MenuText
 {
     padding-top: 7px;
-    color: #3689c9;
+    color: white;
     //padding-left: 4px;
     font-family: Verdana;
     font-size: 13px;
 }
 
 .navigation {
-    background-color: #e9e8f64a;
+    background-color: #8c54ac;
+    height: fit-content;
 }
 
 .imgNavigation {
