--- a/src/WebSite/ClnqWebSite/src/app/app.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/app.component.html
@@ -4,11 +4,11 @@
         <app-header style="position: relative; width: 100%;"></app-header>
     </div>
     <div fxLayout="row" fxLayoutAlign="center" style="display: flex;">
-        <div fxFlex="75px" fxLayout="column" class="navigation" style="overflow-x:auto;" >
+        <!-- <div fxFlex="75px" fxLayout="column" class="navigation" style="overflow-x:auto;" >
             <div class="imgNavigation" id="imgNavigation_patient"  (click)="navigateTo('patients')" >
  
                
-                <img src="./assets/image/patients.svg" style="     width: 40px;
+                <img src="./assets/image/m01.png" style="     width: 40px;
                 height: 40px;
                 cursor: pointer;
                 padding-left: 1px;
@@ -22,20 +22,7 @@
 
             </div>
       
-            <div class="imgNavigation" id="imgNavigation_accueil" (click)="navigateTo('accueil')">
- 
-                <img src="./assets/image/documents.svg" style="     width: 40px;
-                height: 40px;
-                cursor: pointer;
-                padding-left: 1px;
-                padding-top: 9px;
-                padding-right: 8px;">
-
-                  <div class="MenuText" >
-                      Documents
-                  </div>
-
-            </div>
+           
             <div class="imgNavigation" id="imgNavigation_accueil" (click)="navigateTo('accueil')">
  
                 <img src="./assets/image/rendez-vous-medical.png" style="     width: 40px;
@@ -64,10 +51,24 @@
                 </div>
 
             </div>
+            <div class="imgNavigation" id="imgNavigation_accueil" (click)="navigateTo('accueil')">
+ 
+                <img src="./assets/image/documents.svg" style="     width: 40px;
+                height: 40px;
+                cursor: pointer;
+                padding-left: 1px;
+                padding-top: 9px;
+                padding-right: 8px;">
+
+                  <div class="MenuText" >
+                      Documents
+                  </div>
+
+            </div>
             
         
-        </div>
-        <div  fxFlex="calc(100% - 75px)">
+        </div> -->
+        <div  fxFlex="calc(100% - 75px)" style="width: 100%;">
           <router-outlet></router-outlet>
         </div>
     </div>
