--- a/src/WebSite/ClnqWebSite/src/app/views/patients/patients.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/views/patients/patients.component.html
@@ -1,38 +1,116 @@
+
 <div fxLayout="column" fxFill style="padding:20px;padding-top: 10px;" fxLayoutGap="8px">
     <div fxFlex="20px" class="titlePage">
         Pateints > Toutes les patients
     </div>
 
-    
+    <div fxFlex="62px" class="gridReserveOptions" fxLayout="row" fxLayoutGap="5px">
+        
+        <!-- controle -->
+
+        <div class="colored box" style="cursor: pointer; flex-direction: row; box-sizing: border-box; display: flex;">
+            <!-- <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 5%;"> 
+                <div fxFlex fxLayout="row" >
+        
+                    <div style="float: left;
+                    font-size: 14px;
+                    color: white;
+                    padding-top: 9px;">
+                        Rechercher|
+                    </div>
+                    
+                </div>
+            </div> -->
+           
+            <div fxflex="60" style="flex: 1 1 100%; box-sizing: border-box; max-width: 80%;">  <!-- search -->
+                <div fxFlex fxLayout="row" >
+        
+                    <div style="padding-left: 5px;padding-top: 3px;padding-bottom: 4px;">
+                        <dx-text-box fxFlex="calc(100% - 350px)" [class]="'textBoxCssClass'" 
+                        valueChangeEvent="keyup" stylingMode="filled" 
+                        
+                        [placeholder]="'Recherchez nom , prénom ... '" mode="search" [showClearButton]="true">
+                    </dx-text-box>
+       
+                    </div>
+                </div>
+            </div>
+            <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 10%;"> 
+                <div style="float: left;
+                font-size: 14px;
+                color: white;
+                padding-top: 5px;">
+                   <dx-button
+                   stylingMode="outlined"
+                   text="Nouveau"
+                   type="normal"
+                   [width]="130"
+                   [icon]="'plus'"
+                   (click)="newPatientPopUp()"
+                 ></dx-button>
+
+              
+                
+                </div>
+            </div>
+
+            <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 10%;"> 
+                <div style="float: left;
+                font-size: 14px;
+                color: white;
+                padding-top: 5px;">
+                 
+                 <dx-button
+                 stylingMode="outlined"
+                 text="Recharger"
+                 type="normal"
+                 [width]="130"
+                 [icon]="'refresh'"
+                 (click)="newPatientPopUp()"
+               ></dx-button>
+
+                
+                </div>
+            </div>
+         
+        </div>
+       
+
+    </div>
 
     <div fxFlex="calc(100% - 180px)">
 
-        <dx-data-grid #dataGrid class="gridContainer"    [showBorders]="true" 
+        <dx-data-grid #dataGrid class="gridContainer"    
         [hoverStateEnabled]="true" [rowAlternationEnabled]="true" [showRowLines]="true"  noDataText=""
-        [dataSource]="LstPatients"  
-        [showBorders]="true"  dataRowTemplate="dataRowTemplateName">
-     
-       
+        [dataSource]="LstPatients"   [height]="'auto'"
+        [showBorders]="false"  dataRowTemplate="dataRowTemplateName">
         <dxi-column   caption="id" dataField="id" [visible]="false" ></dxi-column>
-        <dxi-column  [width]="200"  caption="Nom"></dxi-column>
-        <dxi-column  [width]="200"  caption="Prenom"></dxi-column>
-        <dxi-column  [width]="100"  caption="Sexe" ></dxi-column>
-        <dxi-column  [width]="80"  caption="Age" ></dxi-column>
-        <dxi-column  [width]="200"  caption="Date de naissance" ></dxi-column>
-        <dxi-column  [width]="250"  caption="Prochain RDV"></dxi-column>
-        <dxi-column  [width]="200"  caption="N° sécurité sociale "></dxi-column>
-        <dxi-column  [width]="200"  caption="Mobile"></dxi-column>
- 
-        <ng-container *dxTemplate="let patient of 'dataRowTemplateName'" class="ficheControle dx-row">
+        <dxi-column  [width]="150"  caption="Nom" [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="150"  caption="Prenom" [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="100"  caption="Sexe" [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="80"  caption="Age" [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="150"  caption="Date de naissance" [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="150"  caption="Prochain RDV" [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="150"  caption="N° sécurité sociale " [alignment]="'left'"></dxi-column>
+        <dxi-column  [width]="100"  caption="Mobile" [alignment]="'left'"></dxi-column>
+        <dxo-load-panel [enabled]="false"></dxo-load-panel>
+        <dxo-scrolling mode="infinite"></dxo-scrolling>
+  
+        <dxo-paging [pageSize]="10"></dxo-paging>
+        <dxo-pager [showPageSizeSelector]="true" [allowedPageSizes]="[10, 20, 30]" [showInfo]="false"
+            [showNavigationButtons]="true"></dxo-pager>
+
+           
+        <ng-container *dxTemplate="let patient of 'dataRowTemplateName'">
             <tr class="main-row" id="row-{{patient.data.id}}" (click)="this.showRow(patient.data.id)">
-                <td style="color: #00679a;">{{patient.data.firstName}}</td>
-                <td style="color: #00679a;">{{patient.data.lastName}}</td>
-                <td style="color: #00679a;">Male</td>
-                <td style="color: #00679a;">{{patient.data.age}}</td>
-                <td style="color: #00679a;">{{convertDate(patient.data.birthDate)}}</td>
-                <td style="color: #00679a;">{{convertDateWithTime(patient.data.nextAppointment)}}</td>
-                <td style="color: #00679a;">18995331375</td>
-                <td style="color: #00679a;">0623797026</td>
+                <td class="rowStyle">{{patient.data.firstName}}</td>
+                <td class="rowStyle">{{patient.data.lastName}}</td>
+                <td class="rowStyle">Male</td>
+                <td class="rowStyle">{{patient.data.age}}</td>
+                <td class="rowStyle">{{convertDate(patient.data.birthDate)}}</td>
+                <td class="rowStyle">{{convertDateWithTime(patient.data.nextAppointment)}}</td>
+                <td sclass="rowStyle"> - </td>
+                <td class="rowStyle"> - </td>
             </tr>
             <tr class="PatientDetail" id="{{patient.data.id}}" style="display: none;">
                 <td colspan="8" tyle="background-color: #00679a !important;">
@@ -52,8 +130,40 @@
             </tr>
           
         </ng-container>
-        
     </dx-data-grid>
 
     </div>
+
+
 </div>
+
+<!-- new patinet -->
+
+<dx-popup [wrapperAttr]="{ class: 'searchAmorFiltresPopup' }" [width]="970" [height]="'auto'" [showTitle]="false"
+     [position]="'center'" [dragEnabled]="false" title="Critères de recherche"
+    [hideOnOutsideClick]="true" [(visible)]="popupVisible">
+    <div fxLayout="column" fxFill fxLayoutGap="5px" fxFill>
+        <div fxLayout="column" fxLayoutGap="5px" fxFlex="calc(100% - 40px)">
+            <dx-text-box
+            placeholder="Enter full name here..."
+            [inputAttr]="{ 'aria-label': 'Full Name' }"
+          ></dx-text-box>
+            <div class="thing">
+          
+                <div fxFlex="55" fxLayout="column" fxLayoutGap="5px">
+                                    <span class="titreCmt">N° de FC / Reserves / Audits / non conformité </span>
+                                    <dx-text-box  [placeholder]="'Ex : FCXXXXX ou ANOXXXX '" #fcanoTextBox
+                                    class="PopUpTextBox"
+                                        id="fcanoTextBox" name="nrsv" text="" value="" mode="text" class="PopUpTextBox"
+                                        
+                                        [stylingMode]="'outlined'" [showClearButton]="true">
+                                    </dx-text-box>
+                                </div>
+
+
+
+
+            </div>
+        </div>
+    </div>
+</dx-popup>
