--- a/src/WebSite/ClnqWebSite/src/styles.css
+++ b/src/WebSite/ClnqWebSite/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+.PopUpTextBox {
+    padding-left: 5px;
+    border-width: 0px;
+    height: 30px;
+    width: 210px;
+    left: 0px;
+    top: 0px;
+    background: inherit;
+    background-color: rgba(255, 255, 255, 1);
+    border: none;
+    font-size: 15px !important;
+    -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0);
+    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+    color: #999999;
+    text-align: left;
+  }
