--- a/src/WebSite/ClnqWebSite/src/app/views/rdv/rdv.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/views/rdv/rdv.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxFill style="padding:20px;padding-top: 10px;" fxLayoutGap="8px">
     <div fxFlex="20px" class="titlePage">
-        Pateints > Toutes les patients
+        Rdv Médical > Gestion des Rdv
     </div>
 
     <div fxFlex="62px" class="gridReserveOptions" fxLayout="row" fxLayoutGap="5px">
@@ -60,58 +60,27 @@
 
     <div fxFlex="calc(100% - 180px)">
 
-        <dx-data-grid #dataGrid class="gridContainer" [hoverStateEnabled]="true" [rowAlternationEnabled]="true"
-            [showRowLines]="true" noDataText="" [dataSource]="LstPatients" [height]="'auto'" [showBorders]="false"
-            dataRowTemplate="dataRowTemplateName">
-            <dxi-column caption="id" dataField="id" [visible]="false"></dxi-column>
-            <dxi-column [width]="150" caption="Nom" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="150" caption="Prénom" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="100" caption="Sexe" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="80" caption="Age" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="150" caption="Date de naissance" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="150" caption="Prochain RDV" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="150" caption="N° sécurité sociale " [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="100" caption="Mobile" [alignment]="'left'"></dxi-column>
-            <dxo-load-panel [enabled]="false"></dxo-load-panel>
-            <dxo-scrolling mode="infinite"></dxo-scrolling>
-
-            <dxo-paging [pageSize]="20"></dxo-paging>
-            <dxo-pager [showPageSizeSelector]="true" [allowedPageSizes]="[20, 30, 40]" [showInfo]="false"
-                [showNavigationButtons]="true"></dxo-pager>
-
-
-            <ng-container *dxTemplate="let patient of 'dataRowTemplateName'">
-                <tr class="main-row" id="row-{{patient.data.id}}" (click)="this.showRow(patient.data.id)">
-                    <td class="rowStyle">{{patient.data.firstName}}</td>
-                    <td class="rowStyle">{{patient.data.lastName}}</td>
-                    <td class="rowStyle">Male</td>
-                    <td class="rowStyle">{{patient.data.age}}</td>
-                    <td class="rowStyle">{{convertDate(patient.data.birthDate)}}</td>
-                    <td class="rowStyle">{{convertDateWithTime(patient.data.nextAppointment)}}</td>
-                    <td sclass="rowStyle"> - </td>
-                    <td class="rowStyle"> - </td>
-                </tr>
-                <tr class="PatientDetail" id="{{patient.data.id}}" style="display: none;">
-                    <td colspan="8" tyle="background-color: #00679a !important;">
-
-                        <div>
-                            <div class="thing">
-                                <div>Nom : <span>{{patient.data.firstName}}</span>, Prénom :
-                                    <span>{{patient.data.lastName}}</span>
-                                </div>
-                                <div></div>
-                                <div>Age : <span>{{patient.data.age}}</span><span> ans</span></div>
-                            </div>
-
-                        </div>
-
-
-                    </td>
-
-                </tr>
-
-            </ng-container>
-        </dx-data-grid>
+        <dx-scheduler
+        timeZone="Paris"
+        textExpr="title"
+    allDayExpr="dayLong"
+    [height]="'calc(100% - 60px)'"
+    ScrollAreaHeight="100%"
+    [adaptivityEnabled]="true"
+    [showCurrentTimeIndicator]='true' [shadeUntilCurrentTime]='true'>
+      >
+      <dxi-view
+        type="day"
+        [startDayHour]="07"
+        [endDayHour]="22">
+    </dxi-view>
+    <dxi-view
+        type="week"
+        [startDayHour]="07"
+        [endDayHour]="22">
+    </dxi-view>
+    <dxi-view type="month"></dxi-view>
+    </dx-scheduler>
 
     </div>
 
