--- a/src/WebSite/ClnqWebSite/src/app/views/patients/patients.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/views/patients/patients.component.html
@@ -63,6 +63,7 @@
         <dx-data-grid #dataGrid class="gridContainer" [hoverStateEnabled]="true" [rowAlternationEnabled]="true"
             [showRowLines]="true" noDataText="" [dataSource]="LstPatients" [height]="'auto'" [showBorders]="false"
             dataRowTemplate="dataRowTemplateName">
+
             <dxi-column caption="id" dataField="id" [visible]="false"></dxi-column>
             <dxi-column [width]="150" caption="Nom" [alignment]="'left'"></dxi-column>
             <dxi-column [width]="150" caption="Prénom" [alignment]="'left'"></dxi-column>
@@ -70,8 +71,10 @@
             <dxi-column [width]="80" caption="Age" [alignment]="'left'"></dxi-column>
             <dxi-column [width]="150" caption="Date de naissance" [alignment]="'left'"></dxi-column>
             <dxi-column [width]="150" caption="Prochain RDV" [alignment]="'left'"></dxi-column>
-            <dxi-column [width]="150" caption="N° sécurité sociale " [alignment]="'left'"></dxi-column>
+            <dxi-column [width]="150" caption="N° sécurité sociale" [alignment]="'left'"></dxi-column>
             <dxi-column [width]="100" caption="Mobile" [alignment]="'left'"></dxi-column>
+            <dxi-column [width]="100" caption="Réference" [alignment]="'left'"></dxi-column>
+
             <dxo-load-panel [enabled]="false"></dxo-load-panel>
             <dxo-scrolling mode="infinite"></dxo-scrolling>
 
@@ -84,15 +87,17 @@
                 <tr class="main-row" id="row-{{patient.data.id}}" (click)="this.showRow(patient.data.id)">
                     <td class="rowStyle">{{patient.data.firstName}}</td>
                     <td class="rowStyle">{{patient.data.lastName}}</td>
-                    <td class="rowStyle">Male</td>
+                    <td class="rowStyle">{{patient.data.gender}}</td>
                     <td class="rowStyle">{{patient.data.age}}</td>
                     <td class="rowStyle">{{convertDate(patient.data.birthDate)}}</td>
-                    <td class="rowStyle">{{convertDateWithTime(patient.data.nextAppointment)}}</td>
-                    <td sclass="rowStyle"> - </td>
-                    <td class="rowStyle"> - </td>
+                    <td class="rowStyle">{{convertDate(patient.data.nextAppointment)}}</td>
+                    <td class="rowStyle">{{patient.data.socialSecurityNumber?patient.data.socialSecurityNumber:"-"}}</td>
+                    <td sclass="rowStyle"> {{patient.data.mobile?patient.data.mobile:"-"}} </td>
+                    <td sclass="rowStyle"> {{patient.data.referral}} </td>
+                    
                 </tr>
                 <tr class="PatientDetail" id="{{patient.data.id}}" style="display: none;">
-                    <td colspan="8" tyle="background-color: #00679a !important;">
+                    <td colspan="9" tyle="background-color: #00679a !important;">
 
                         <div>
                             <div class="thing">
@@ -120,186 +125,199 @@
 
 <!-- new patinet -->
 
-<dx-popup [wrapperAttr]="{ class: 'searchAmorFiltresPopup' }" [width]="700" [height]="420" [showTitle]="true"
-    [position]="'top'" [dragEnabled]="false" title="Nouveau Patient" [hideOnOutsideClick]="true"
+<dx-popup [wrapperAttr]="{ class: 'searchAmorFiltresPopup' }" [width]="665" [height]="600" [showTitle]="true"
+    [position]="'top'" [dragEnabled]="false" title="Nouveau patient" [hideOnOutsideClick]="true"
     [(visible)]="popupVisible">
 
-   
+
 
     <div fxLayout="column" fxFill fxLayoutGap="5px" fxFill>
-        
+
         <!-- nom & prenom -->
         <div style="display: flex; padding-bottom: 8px;">
 
 
             <div>
                 <span class="titreCmt">Nom</span>
-    
-                <dx-text-box [placeholder]="''"  [class]="'defaultTextBoxCssClass'" name="pat_nom" text="" [(value)]="pat_nom"
-                    mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
+
+                <dx-text-box [placeholder]="''" [class]="'defaultTextBoxCssClass'" name="pat_nom" text=""
+                    [(value)]="pat_nom" mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
                 </dx-text-box>
             </div>
-    
+
             <div style="padding-left: 5%;">
                 <span class="titreCmt">Prénom</span>
-    
-                <dx-text-box [placeholder]="''" [class]="'defaultTextBoxCssClass'" name="pat_prenom" text="" [(value)]="pat_prenom"
-                    mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
+
+                <dx-text-box [placeholder]="''" [class]="'defaultTextBoxCssClass'" name="pat_prenom" text=""
+                    [(value)]="pat_prenom" mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
                 </dx-text-box>
             </div>
 
         </div>
-       
-        <!-- date de nai. -->
-        <div style="padding-bottom: 8px;">
-            <span class="titreCmt">Date de naissance</span>
 
-            <dx-date-box
-            #dateNais
-            placeholder="Ex : JJ/MM/AAAA"
-            [min]="min"
-            [max]="pat_date_n"
-            >
-        </dx-date-box>
+        <!-- date de nai & sexe -->
+
+        <div style="display: flex; padding-bottom: 8px;">
+
+
+            <div>
+                <span class="titreCmt">Date de naissance</span>
+
+                <dx-date-box #dateNais placeholder="Ex : JJ/MM/AAAA" [min]="min" [max]="pat_date_n">
+
+                </dx-date-box>
+            </div>
+            <!-- sexe -->
+            <div style="padding-left: 5%;">
+
+                <span class="titreCmt">Sexe</span>
+
+                <dx-select-box [class]="'defaultTextBoxCssClass'" displayExpr="sexe" [searchEnabled]="false" valueExpr="lognomusr"
+                    [acceptCustomValue]="false" [showClearButton]="false" [(value)]="sexePteint" valueExpr="sexe"
+                    placeholder="Séléctionnez" [dataSource]="sexePteintList">
+                </dx-select-box>
+
+
+            </div>
+
         </div>
-        
-        <!-- rdv. -->
+
+           <!-- Sec soc -->
+           <div style="display: flex; padding-bottom: 8px;">
+           
+            <div>
+                <span class="titreCmt">N° sécurité sociale</span>
+
+                <dx-text-box [placeholder]="''"  [width]="631"  [class]="'defaultTextBoxCssClass'" name="pat_num_suc"
+                    text="" [(value)]="pat_num_suc" mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
+                </dx-text-box>
+            </div>
+           
+
+        </div>
+
+
+        <!-- Prochain Rdv -->
 
         <div style="display: flex;padding-bottom: 8px;">
 
             <div>
 
                 <span class="titreCmt">Prochain Rdv</span>
-            
-                <dx-date-box 
-                #dateRdv
-                placeholder="Ex : JJ/MM/AAAA"
-                 [min]="pat_date_rdv"
-                 >
+
+                <dx-date-box #dateRdv placeholder="Ex : JJ/MM/AAAA" [min]="pat_date_rdv">
                 </dx-date-box>
-                
+
 
             </div>
 
             <div style="padding-left: 5%;">
 
                 <span class="titreCmt">de</span>
-                <dx-date-box 
-                #startRdv
-                placeholder="HH:mm"
-                type="time" 
-                [width]="100"  
-                [interval]="15"
-                [inputAttr]="{ 'aria-label': 'Time' }">
-            </dx-date-box>
+                <dx-date-box #startRdv placeholder="HH:mm" type="time" [width]="133" [interval]="15"
+                    [inputAttr]="{ 'aria-label': 'Time' }">
+                </dx-date-box>
 
             </div>
 
             <div style="padding-left: 5%;">
 
                 <span class="titreCmt">à</span>
-                <dx-date-box 
-                #endRdv
-                placeholder="HH:mm"
-                type="time" 
-                [width]="100"  
-                [interval]="15"
-                [inputAttr]="{ 'aria-label': 'Time' }">
-            </dx-date-box>
+                <dx-date-box #endRdv placeholder="HH:mm" type="time" [width]="133" [interval]="15"
+                    [inputAttr]="{ 'aria-label': 'Time' }">
+                </dx-date-box>
 
             </div>
-         
-            
-      
+
+
+
         </div>
+        <!-- Mobile. & email -->
         <div style="display: flex; padding-bottom: 8px;">
-          <!-- Mobile. -->
-          <div style="padding-bottom: 8px;">
-            <span class="titreCmt">Mobile</span>
+           
+            <div>
+                <span class="titreCmt">Mobile</span>
 
-            <dx-text-box 
+                <dx-text-box [placeholder]="''"  [class]="'defaultTextBoxCssClass'" name="pat_prenom"
+                    text="" [(value)]="pat_mobile" mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
+                </dx-text-box>
+
+            </div>
+
           
-            [placeholder]="''" 
-            mask="0 000000000" 
-            [class]="'defaultTextBoxCssClass'" 
-            name="pat_prenom" 
-            text="" 
-            [(value)]="pat_mobile"
-            mode="text" 
-            [stylingMode]="'outlined'" 
-            [showClearButton]="true">
-        </dx-text-box>
+            <div style="padding-bottom: 15px;padding-left: 5%;">
+                <span class="titreCmt">Email</span>
 
+                <dx-text-box [placeholder]="''" [class]="'defaultTextBoxCssClass'" name="pat_prenom" text=""
+                    [(value)]="pat_email" mode="text" [stylingMode]="'outlined'" [showClearButton]="true">
+                    <dx-validator>
+                        <dxi-validation-rule type="email" message="e-mail icorrect">
+                        </dxi-validation-rule>
+                    </dx-validator>
+                </dx-text-box>
+
+            </div>
         </div>
 
-         <!-- Mail. -->
-         <div style="padding-bottom: 15px;padding-left: 5%;">
-            <span class="titreCmt">Email</span>
+         <!-- Mobile. & email -->
+         <div style="display: flex; padding-bottom: 8px;">
+           
+            <div style="padding-bottom: 8px;">
+                <span class="titreCmt">Réference & Contact:</span>
 
-            <dx-text-box
+                <dx-text-area
+                [height]="65"
+                [width]="631"
+                [(value)]="pat_ref"
+                [autoResizeEnabled]="true"
+                [inputAttr]="{ 'aria-label': 'Notes' }"
+              >
+              </dx-text-area>
+
+            </div>
+
           
-            [placeholder]="''"   
-            [class]="'defaultTextBoxCssClass'" 
-            name="pat_prenom" 
-            text="" 
-            [(value)]="pat_email"
-            mode="text" 
-            [stylingMode]="'outlined'" 
-            [showClearButton]="true">
-            <dx-validator>
-                <dxi-validation-rule 
-                    type="email" 
-                    message="e-mail icorrect">
-                </dxi-validation-rule>
-            </dx-validator>
-        </dx-text-box>
-
+           
         </div>
-    </div>
-      
-
-        <div fxFlex="62px" class="gridReserveOptions" fxLayout="row" fxLayoutGap="5px">
 
 
+        <div fxFlex="62px" class="gridReserveOptions" style="width: 631px !important;" fxLayout="row" fxLayoutGap="5px">
 
-            <div class="colored box" style="cursor: pointer; flex-direction: row; box-sizing: border-box; display: flex;">
-                <!-- search -->
-                <div fxflex="60" style="flex: 1 1 100%; box-sizing: border-box; max-width: 75%;">
+
+            <div class="colored box"
+                style="cursor: pointer; flex-direction: row; box-sizing: border-box; display: flex;">
+              
+                <div fxflex="60" style="flex: 1 1 100%; box-sizing: border-box; max-width: 73%;">
                     <div fxFlex fxLayout="row">
-    
-    
-    
-    
                         <div style="padding-left: 5px;padding-top: 3px;padding-bottom: 4px;">
-                           
-    
+
+
                         </div>
                     </div>
                 </div>
                 <!-- buttons controle -->
-              
-    
-                <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 15%;">
+
+
+                <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 25%;">
                     <div style="float: left;
                     font-size: 14px;
                     color: white;
                     padding-top: 0px;
                     padding-left: 22px;">
-    
+
                         <dx-button stylingMode="outlined" text="Ajouter" type="normal" [width]="130" [icon]="'todo'"
                             (click)="newPatient()"></dx-button>
-    
-    
+
+
                     </div>
                 </div>
-    
+
             </div>
-    
-    
+
+
         </div>
 
-                        
 
-          
+
     </div>
 </dx-popup>
